# csv-uploader

./: .gitignore  README.md
.github/workflows/: csv-uploader.yml
apps/csv-uploader/: config.py  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  s3_client.py
apps/csv-uploader/tests/: test_main.py
apps/webapp/: Dockerfile  __init__.py  docker-compose.yml  requirements.txt
apps/webapp/templates/: index.html
docs/adr/: 0001-development-environment.md  0002-sqlite-demo.md  0003-aws-infrastructure.md  0004-flux-gitops.md  0005-gateway-api.md  0006-karpenter.md  0007-terraform-local-state.md  0008-ci-cd-pipeline.md  0009-security.md  README.md
infra/dev/k8s/: Makefile  README.md
infra/dev/k8s/flux/: kustomization.yaml
infra/dev/k8s/values/: csv-uploader.yaml  minio.yaml  panda-secret.yaml
infra/helm/csv-uploader/: Chart.yaml  values.yaml
infra/helm/csv-uploader/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
infra/helm/panda-secret/: Chart.yaml  values.yaml
infra/helm/panda-secret/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml
infra/prod/k8s/: README.md
infra/prod/k8s/flux-apps/: csv-uploader.yaml  kustomization.yaml  panda-secret.yaml
infra/prod/k8s/flux-configs/: gateway.yaml  kustomization.yaml
infra/prod/terraform/: README.md  diagram.py  main.tf  providers.tf  s3.tf  variables.tf  versions.tf
k6/: Makefile  load-test.js
(+23 files in other folders)
